--- a/template.gitlab-ci.yml
+++ b/template.gitlab-ci.yml
@@ -26,7 +26,7 @@ before_script:
   - virtualenv -p python3 venv
   - source venv/bin/activate
   - pip install -r requirements.txt
-  - ansible-galaxy install batfish.base
+  - ansible-galaxy install --force batfish.base
 
 config_gen:
   stage: build
